index page with link on label working. Show page is not

--- a/app/views/recipes/homepage.html.erb
+++ b/app/views/recipes/homepage.html.erb
@@ -1,8 +1,2 @@
 <h1>Muncher</h1>
-
-<%= form_tag recipes_path, method: :get do %>
-<%= label_tag(:message, "Find Your Flavor") %>
-<%= text_field_tag(:message) %>
-<%= submit_tag("Search") %>
-
-<% end %>
+<%= render partial: "header" %>
