--- a/app/views/recipes/homepage.html.erb
+++ b/app/views/recipes/homepage.html.erb
@@ -1,2 +1,4 @@
-<h1>Muncher</h1>
-<%= render partial: "header" %>
+<section class="homepage">
+  <h1 class="homepage">Muncher</h1>
+  <%= render partial: "header" %>
+</section>
