--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,16 +1,17 @@
-<h1>Muncher</h1>
+<h1><%= link_to "Muncher", root_path %></h1>
 <%= render partial: "header" %>
 <h2>List of Recipes</h2>
 
-<section>
+<div class="card-columns">
 <% if @recipes %>
-    <ul>
-      <% @recipes.each do |r| %>
-        <li>
-          <%= link_to r.label, recipe_path(:id) %>
-          <%= image_tag r.image %>
-        </li>
+      <% @recipes.each do |recipe| %>
+          <div class="card text-black"
+          <%= link_to image_tag(recipe.image, alt: "#{recipe.label}"), recipe_path(recipe.id) %>
+          <%= link_to recipe.label, recipe_path(recipe.id) %>
+
+          </div>
       <% end %>
-    </ul>
   <% end %>
-</section>
+</div>
+
+<%= will_paginate @recipes %>
