--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,9 @@
-<h1>Muncher</h1>
+<h1><%= link_to "Muncher", root_path %></h1>
 <%= render partial: "header" %>
 <h2>Recipe</h2>
 
 <%= @recipe.label %>
+<%=image_tag @recipe.image %>
+<%= @recipe.ingredients %>
+<%= @recipe.health_labels %>
+<%= @recipe.url %>
