--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <script src="https://developer.edamam.com/attribution/badge.js"></script>
   </head>
 
-  <body>
+  <body id="homepage">
     <main>
       <%= yield %>
     </main>
