--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= link_to "Muncher", root_path %></h1>
+<h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
 <%= render partial: "header" %>
 <h2>Recipe</h2>
 
