--- a/app/views/recipes/homepage.html.erb
+++ b/app/views/recipes/homepage.html.erb
@@ -1,4 +1,4 @@
-<section class="homepage">
-  <h1 class="homepage">Muncher</h1>
+<section class="homepage" id="search">
+  <h1 class="homepage muncher-header">Munchies</h1>
   <%= render partial: "header" %>
 </section>
