--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,17 +1,24 @@
-<h1><%= link_to "Muncher", root_path %></h1>
+<h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
 <%= render partial: "header" %>
-<h2>List of Recipes</h2>
 
-<div class="card-columns">
-<% if @recipes %>
-      <% @recipes.each do |recipe| %>
-          <div class="card text-black"
-          <%= link_to image_tag(recipe.image, alt: "#{recipe.label}"), recipe_path(recipe.id) %>
-          <%= link_to recipe.label, recipe_path(recipe.id) %>
+<article class="recipes-list">
+  <h2>List of Recipes</h2>
 
-          </div>
-      <% end %>
+
+        <% if @recipes %>
+        <% @recipes.each do |recipe| %>
+        <div class="card-columns">
+          <div class="col-sm-12">
+            <div class="card">
+        <%= link_to image_tag("#{recipe.image}", alt: "#{recipe.label}", class: "card-img-top"), recipe_path(recipe.id) %>
+
+        <%= link_to "#{recipe.label}", recipe_path(recipe.id), class: "card-img-overlay" %>
+      </div>
+    </div>
+  </div>
   <% end %>
-</div>
+  <% end %>
 
 <%= will_paginate @recipes %>
+
+</article>
