--- a/app/views/recipes/_header.html.erb
+++ b/app/views/recipes/_header.html.erb
@@ -1,6 +1,4 @@
-<%= form_tag recipes_path, method: :get do %>
-<%= label_tag(:search, "Find Your Flavor") %>
-<%= text_field_tag(:search)%>
-<%= submit_tag("Search") %>
-
-<% end %>
+<nav class="navbar fixed-top">
+  <h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
+  <%= render partial: "search" %>
+</nav>
