--- a/app/views/recipes/homepage.html.erb
+++ b/app/views/recipes/homepage.html.erb
@@ -1,4 +1,4 @@
-<section class="homepage" id="search">
+<section id="homepage">
   <h1 class="homepage muncher-header">Munchies</h1>
-  <%= render partial: "header" %>
+  <%= render partial: "search" %>
 </section>
