--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,14 +1,12 @@
-<h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
 <%= render partial: "header" %>
-
-<article class="recipes-list">
-  <h2>List of Recipes</h2>
+<h2>List of Recipes</h2>
 
 
+<ul class="container">
         <% if @recipes %>
         <% @recipes.each do |recipe| %>
-        <div class="card-columns">
-          <div class="col-sm-12">
+        <div class="card-deck">
+          <div class="col-md-12">
             <div class="card">
         <%= link_to image_tag("#{recipe.image}", alt: "#{recipe.label}", class: "card-img-top"), recipe_path(recipe.id) %>
 
@@ -21,4 +19,4 @@
 
 <%= will_paginate @recipes %>
 
-</article>
+</ul>
