--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,5 @@
 <h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
-<%= render partial: "header" %>
+<%= render partial: "search" %>
 <h2>Recipe</h2>
 
 <%= @recipe.label %>
