--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     </main>
 
     <footer>
-      <div id="edamam-badge" data-color="transparent"></div>
+      <div id="edamam-badge" data-color="white"></div>
     </footer>
   </body>
 </html>
