--- a/app/views/recipes/_header.html.erb
+++ b/app/views/recipes/_header.html.erb
@@ -1,4 +1,6 @@
-<nav class="navbar fixed-top">
-  <h1 class="muncher-header"><%= link_to "Munchies", root_path %></h1>
-  <%= render partial: "search" %>
-</nav>
+<div class="nav-container">
+  <nav class="navbar muncher-header">
+    <h1><%= link_to "Munchies", root_path %></h1>
+    <%= render partial: "search" %>
+  </nav>
+</div>
