--- a/app/views/recipes/homepage.html.erb
+++ b/app/views/recipes/homepage.html.erb
@@ -1,4 +1,4 @@
-<section id="homepage">
-  <h1 class="homepage muncher-header">Munchies</h1>
+<section class="muncher-header" id="muncher-homepage">
+  <h1>Munchies</h1>
   <%= render partial: "search" %>
 </section>
