--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,22 +1,23 @@
-<%= render partial: "header" %>
-<h2>List of Recipes</h2>
+<section>
+  <%= render partial: "header" %>
+</section>
 
 
-<ul class="container">
-        <% if @recipes %>
+<div class="container">
+  <h2>List of Recipes for: <%= params[:search].capitalize %></h2>
+  <div class="row">
         <% @recipes.each do |recipe| %>
-        <div class="card-deck">
-          <div class="col-md-12">
-            <div class="card">
-        <%= link_to image_tag("#{recipe.image}", alt: "#{recipe.label}", class: "card-img-top"), recipe_path(recipe.id) %>
+        <div class="col-md-4">
+          <div class="card-group">
+              <div class="card">
+                <%= link_to image_tag("#{recipe.image}", alt: "#{recipe.label}", class: "card-img-top"), recipe_path(recipe.id) %>
 
-        <%= link_to "#{recipe.label}", recipe_path(recipe.id), class: "card-img-overlay" %>
-      </div>
-    </div>
+                <%= link_to "#{recipe.label}", recipe_path(recipe.id), class: "card-img-overlay" %>
+              </div>
+            </div>
+          </div>
+  <% end %>
   </div>
-  <% end %>
-  <% end %>
 
 <%= will_paginate @recipes %>
-
-</ul>
+</div>
