--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,8 +1,19 @@
-<%= render partial: "header" %>
-<h2>Recipe</h2>
+<section>
+  <%= render partial: "header" %>
+</section>
 
-<%= @recipe.label %>
-<%=image_tag @recipe.image %>
-<%= @recipe.ingredients %>
-<%= @recipe.health_labels %>
-<%= @recipe.url %>
+<div class="container">
+  <h2>Recipe for: <%= @recipe.label %></h2>
+  <div class="row">
+    <div class="col-md-6">
+      <%=image_tag @recipe.image %>
+    </div>
+    <div class="col-md-6">
+      <h4>By: <%= @recipe.recipe_source %></h4>
+      <p><strong>Ingredients: </strong><%= @recipe.ingredients %></p>
+      <p><strong>Health Labels: </strong><%= @recipe.health_labels %></p>
+      <p><strong>Recipe Link: </strong><%= link_to @recipe.label, @recipe.url, target: "_blank" %></p>
+    </div>
+  </div>
+</div>
+</div>
