--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -5,6 +5,7 @@
 
 <div class="container">
   <h2>List of Recipes for: <%= params[:search].capitalize %></h2>
+  <%= will_paginate @recipes %>
   <div class="row">
         <% @recipes.each do |recipe| %>
         <div class="col-md-4">
