--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,8 +10,16 @@
     </div>
     <div class="col-md-6">
       <h4>By: <%= @recipe.recipe_source %></h4>
-      <p><strong>Ingredients: </strong><%= @recipe.ingredients %></p>
-      <p><strong>Health Labels: </strong><%= @recipe.health_labels %></p>
+      <p><strong>Ingredients: </strong><% @recipe.ingredients.each do |ingredient| %>
+        <li>
+          <%= ingredient %>
+        </li>
+        <% end %></p>
+      <p><strong>Health Labels: </strong><% @recipe.health_labels.each do |health_label| %>
+        <li>
+          <%= health_label %>
+        </li>
+        <% end %></p>
       <p><strong>Recipe Link: </strong><%= link_to @recipe.label, @recipe.url, target: "_blank" %></p>
     </div>
   </div>
