--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,11 @@ h4 {
   padding-bottom: 10%;
 }
 
+.btn:hover {
+  background-color: #F94A04;
+  color: #FFF;
+}
+
 a {
   color: #FFF;
 }
@@ -105,7 +110,7 @@ a.card-img-overlay:hover {
 
 p {
   color: #F94A04;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 li {
