--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,10 @@
  *
  */
 @import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans+Condensed:300');
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+	background: url('https://cdn.pixabay.com/photo/2017/06/01/18/46/cook-2364221_1280.jpg')
+  no-repeat center center fixed;
+}
 /* Custom bootstrap variables must be set or imported *before* bootstrap. */
 @import "bootstrap";
 /* Import scss content */
